--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "mongoose": "^4.6.0",
     "nodemon": "^1.11.0",
     "express-ejs-layouts": "^2.2.0",
-    "ejs": "^2.5.2",
-    
+    "ejs": "^2.5.2"
   }
 }
