--- a/package.json
+++ b/package.json
@@ -3,20 +3,21 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "nodemon ./bin/www --ignore ./timer/"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
+    "ejs": "^2.5.2",
     "express": "~4.13.1",
-    "jade": "~1.11.0",
-    "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0",
-    "express-session": "^1.14.1",
-    "mongoose": "^4.6.0",
-    "nodemon": "^1.11.0",
     "express-ejs-layouts": "^2.2.0",
-    "ejs": "^2.5.2"
+    "express-session": "^1.14.1",
+    "jade": "~1.11.0",
+    "jsonfile": "^2.4.0",
+    "mongoose": "^4.6.0",
+    "morgan": "~1.6.1",
+    "nodemon": "^1.11.0",
+    "serve-favicon": "~2.3.0"
   }
 }
